BB-4930: Update styles for Sign In/Sign Out buttons -fix white spaces in the code

--- a/src/Oro/Bundle/MenuBundle/Resources/public/default/scss/components/quick-access/quick-access.scss
+++ b/src/Oro/Bundle/MenuBundle/Resources/public/default/scss/components/quick-access/quick-access.scss
@@ -66,7 +66,6 @@
 @include breakpoint('tablet') {
     .quick-access {
         padding-top: 7px;
-        padding-bottom: 16px;
 
         border-bottom: 1px solid get-color('additional', 'light');
 
